[tool.poetry]
name = "openrelik-worker-hayabusa"
version = "2024.11.27"
description = "Windows event log triage"
authors = ["Johan Berggren <jberggren@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["redis"], version = "^5.4.0"}
openrelik-worker-common = "^2024.11.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
